--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Marley.js</title>
+    <title>Tiendas digitales Negux</title>
 
     <base href="/">
 
@@ -11,9 +11,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta name="description" content="Modern Angular 6+ Stack.">
-    <meta name="author" content="Petr Nikolas">
-    <meta http-equiv="Content-language" content="en">
+    <meta name="description" content="Tiendas digitales la venta de casas, terrenos, alquileres, comida, objetos, en El Alto Bolivia">
+    <meta name="author" content="negux">
+    <meta http-equiv="Content-language" content="es">
     <meta name='reply-to' content='hello@petrnikolas.com'>
     <meta name='url' content=''>
     <meta name='identifier-URL' content=''>
@@ -40,6 +40,32 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "url": "https://negux.com",
+          "name": "Innovaciones Negux",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-401-555-1212",
+            "contactType": "Customer service"
+          }
+        }
+        </script>
+<!--Cambiarlo por el analytics de negux.com-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124878693-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124878693-1');
+</script>
+
+
 </head>
 
 <body>
