Adding banner in store's data

--- a/src/assets/font/fontello/demo.html
+++ b/src/assets/font/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontellounicode';
-      src: url('./font/fontellounicode.eot?83993446');
-      src: url('./font/fontellounicode.eot?83993446#iefix') format('embedded-opentype'),
-           url('./font/fontellounicode.woff?83993446') format('woff'),
-           url('./font/fontellounicode.ttf?83993446') format('truetype'),
-           url('./font/fontellounicode.svg?83993446#fontellounicode') format('svg');
+      src: url('./font/fontellounicode.eot?92252826');
+      src: url('./font/fontellounicode.eot?92252826#iefix') format('embedded-opentype'),
+           url('./font/fontellounicode.woff?92252826') format('woff'),
+           url('./font/fontellounicode.ttf?92252826') format('truetype'),
+           url('./font/fontellounicode.svg?92252826#fontellounicode') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -480,6 +480,12 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe871"><i class="demo-icon coffee-[#689]icon-">&#xe871;</i> <span class="i-name">coffee-[#689]icon-</span><span class="i-code">0xe871</span></div>
         <div class="the-icons span3" title="Code: 0xe872"><i class="demo-icon sport_1icon-">&#xe872;</i> <span class="i-name">sport_1icon-</span><span class="i-code">0xe872</span></div>
+        <div class="the-icons span3" title="Code: 0xe873"><i class="demo-icon share-1icon-">&#xe873;</i> <span class="i-name">share-1icon-</span><span class="i-code">0xe873</span></div>
+        <div class="the-icons span3" title="Code: 0xe874"><i class="demo-icon chaticon-">&#xe874;</i> <span class="i-name">chaticon-</span><span class="i-code">0xe874</span></div>
+      </div>
+      <div class="row">
+        <div class="the-icons span3" title="Code: 0xe875"><i class="demo-icon ok-1icon-">&#xe875;</i> <span class="i-name">ok-1icon-</span><span class="i-code">0xe875</span></div>
+        <div class="the-icons span3" title="Code: 0xe888"><i class="demo-icon chat-1icon-">&#xe888;</i> <span class="i-name">chat-1icon-</span><span class="i-code">0xe888</span></div>
         <div class="the-icons span3" title="Code: 0xf02e"><i class="demo-icon download-1icon-">&#xf02e;</i> <span class="i-name">download-1icon-</span><span class="i-code">0xf02e</span></div>
         <div class="the-icons span3" title="Code: 0xf02f"><i class="demo-icon upload-1icon-">&#xf02f;</i> <span class="i-name">upload-1icon-</span><span class="i-code">0xf02f</span></div>
       </div>
@@ -499,69 +505,70 @@ body {
         <div class="the-icons span3" title="Code: 0xf0d4"><i class="demo-icon gplus-squaredicon-">&#xf0d4;</i> <span class="i-name">gplus-squaredicon-</span><span class="i-code">0xf0d4</span></div>
         <div class="the-icons span3" title="Code: 0xf0d5"><i class="demo-icon gplusicon-">&#xf0d5;</i> <span class="i-name">gplusicon-</span><span class="i-code">0xf0d5</span></div>
         <div class="the-icons span3" title="Code: 0xf0e0"><i class="demo-icon mail-alticon-">&#xf0e0;</i> <span class="i-name">mail-alticon-</span><span class="i-code">0xf0e0</span></div>
-        <div class="the-icons span3" title="Code: 0xf0f3"><i class="demo-icon bell-alticon-">&#xf0f3;</i> <span class="i-name">bell-alticon-</span><span class="i-code">0xf0f3</span></div>
+        <div class="the-icons span3" title="Code: 0xf0e6"><i class="demo-icon chat-emptyicon-">&#xf0e6;</i> <span class="i-name">chat-emptyicon-</span><span class="i-code">0xf0e6</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf0f3"><i class="demo-icon bell-alticon-">&#xf0f3;</i> <span class="i-name">bell-alticon-</span><span class="i-code">0xf0f3</span></div>
         <div class="the-icons span3" title="Code: 0xf0f5"><i class="demo-icon foodicon-">&#xf0f5;</i> <span class="i-name">foodicon-</span><span class="i-code">0xf0f5</span></div>
         <div class="the-icons span3" title="Code: 0xf0fe"><i class="demo-icon plus-squaredicon-">&#xf0fe;</i> <span class="i-name">plus-squaredicon-</span><span class="i-code">0xf0fe</span></div>
         <div class="the-icons span3" title="Code: 0xf104"><i class="demo-icon angle-lefticon-">&#xf104;</i> <span class="i-name">angle-lefticon-</span><span class="i-code">0xf104</span></div>
-        <div class="the-icons span3" title="Code: 0xf105"><i class="demo-icon angle-righticon-">&#xf105;</i> <span class="i-name">angle-righticon-</span><span class="i-code">0xf105</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf105"><i class="demo-icon angle-righticon-">&#xf105;</i> <span class="i-name">angle-righticon-</span><span class="i-code">0xf105</span></div>
         <div class="the-icons span3" title="Code: 0xf106"><i class="demo-icon angle-upicon-">&#xf106;</i> <span class="i-name">angle-upicon-</span><span class="i-code">0xf106</span></div>
         <div class="the-icons span3" title="Code: 0xf107"><i class="demo-icon angle-downicon-">&#xf107;</i> <span class="i-name">angle-downicon-</span><span class="i-code">0xf107</span></div>
         <div class="the-icons span3" title="Code: 0xf10c"><i class="demo-icon circle-emptyicon-">&#xf10c;</i> <span class="i-name">circle-emptyicon-</span><span class="i-code">0xf10c</span></div>
-        <div class="the-icons span3" title="Code: 0xf111"><i class="demo-icon circleicon-">&#xf111;</i> <span class="i-name">circleicon-</span><span class="i-code">0xf111</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf111"><i class="demo-icon circleicon-">&#xf111;</i> <span class="i-name">circleicon-</span><span class="i-code">0xf111</span></div>
         <div class="the-icons span3" title="Code: 0xf122"><i class="demo-icon reply-allicon-">&#xf122;</i> <span class="i-name">reply-allicon-</span><span class="i-code">0xf122</span></div>
         <div class="the-icons span3" title="Code: 0xf123"><i class="demo-icon star-half-alticon-">&#xf123;</i> <span class="i-name">star-half-alticon-</span><span class="i-code">0xf123</span></div>
         <div class="the-icons span3" title="Code: 0xf133"><i class="demo-icon calendar-emptyicon-">&#xf133;</i> <span class="i-name">calendar-emptyicon-</span><span class="i-code">0xf133</span></div>
-        <div class="the-icons span3" title="Code: 0xf14a"><i class="demo-icon ok-squaredicon-">&#xf14a;</i> <span class="i-name">ok-squaredicon-</span><span class="i-code">0xf14a</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf14a"><i class="demo-icon ok-squaredicon-">&#xf14a;</i> <span class="i-name">ok-squaredicon-</span><span class="i-code">0xf14a</span></div>
         <div class="the-icons span3" title="Code: 0xf14b"><i class="demo-icon pencil-squaredicon-">&#xf14b;</i> <span class="i-name">pencil-squaredicon-</span><span class="i-code">0xf14b</span></div>
         <div class="the-icons span3" title="Code: 0xf14d"><i class="demo-icon export-alticon-">&#xf14d;</i> <span class="i-name">export-alticon-</span><span class="i-code">0xf14d</span></div>
         <div class="the-icons span3" title="Code: 0xf173"><i class="demo-icon tumblricon-">&#xf173;</i> <span class="i-name">tumblricon-</span><span class="i-code">0xf173</span></div>
-        <div class="the-icons span3" title="Code: 0xf174"><i class="demo-icon tumblr-squaredicon-">&#xf174;</i> <span class="i-name">tumblr-squaredicon-</span><span class="i-code">0xf174</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf174"><i class="demo-icon tumblr-squaredicon-">&#xf174;</i> <span class="i-name">tumblr-squaredicon-</span><span class="i-code">0xf174</span></div>
         <div class="the-icons span3" title="Code: 0xf1f6"><i class="demo-icon bell-officon-">&#xf1f6;</i> <span class="i-name">bell-officon-</span><span class="i-code">0xf1f6</span></div>
         <div class="the-icons span3" title="Code: 0xf1f7"><i class="demo-icon bell-off-emptyicon-">&#xf1f7;</i> <span class="i-name">bell-off-emptyicon-</span><span class="i-code">0xf1f7</span></div>
         <div class="the-icons span3" title="Code: 0xf1f8"><i class="demo-icon trashicon-">&#xf1f8;</i> <span class="i-name">trashicon-</span><span class="i-code">0xf1f8</span></div>
-        <div class="the-icons span3" title="Code: 0xf201"><i class="demo-icon chart-lineicon-">&#xf201;</i> <span class="i-name">chart-lineicon-</span><span class="i-code">0xf201</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf201"><i class="demo-icon chart-lineicon-">&#xf201;</i> <span class="i-name">chart-lineicon-</span><span class="i-code">0xf201</span></div>
         <div class="the-icons span3" title="Code: 0xf21d"><i class="demo-icon street-viewicon-">&#xf21d;</i> <span class="i-name">street-viewicon-</span><span class="i-code">0xf21d</span></div>
         <div class="the-icons span3" title="Code: 0xf230"><i class="demo-icon facebook-officialicon-">&#xf230;</i> <span class="i-name">facebook-officialicon-</span><span class="i-code">0xf230</span></div>
         <div class="the-icons span3" title="Code: 0xf231"><i class="demo-icon pinteresticon-">&#xf231;</i> <span class="i-name">pinteresticon-</span><span class="i-code">0xf231</span></div>
-        <div class="the-icons span3" title="Code: 0xf232"><i class="demo-icon whatsappicon-">&#xf232;</i> <span class="i-name">whatsappicon-</span><span class="i-code">0xf232</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf232"><i class="demo-icon whatsappicon-">&#xf232;</i> <span class="i-name">whatsappicon-</span><span class="i-code">0xf232</span></div>
         <div class="the-icons span3" title="Code: 0xf27a"><i class="demo-icon commentingicon-">&#xf27a;</i> <span class="i-name">commentingicon-</span><span class="i-code">0xf27a</span></div>
         <div class="the-icons span3" title="Code: 0xf2bd"><i class="demo-icon user-circleicon-">&#xf2bd;</i> <span class="i-name">user-circleicon-</span><span class="i-code">0xf2bd</span></div>
         <div class="the-icons span3" title="Code: 0xf2be"><i class="demo-icon user-circle-oicon-">&#xf2be;</i> <span class="i-name">user-circle-oicon-</span><span class="i-code">0xf2be</span></div>
-        <div class="the-icons span3" title="Code: 0xf2d3"><i class="demo-icon window-closeicon-">&#xf2d3;</i> <span class="i-name">window-closeicon-</span><span class="i-code">0xf2d3</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf2d3"><i class="demo-icon window-closeicon-">&#xf2d3;</i> <span class="i-name">window-closeicon-</span><span class="i-code">0xf2d3</span></div>
         <div class="the-icons span3" title="Code: 0xf2d4"><i class="demo-icon window-close-oicon-">&#xf2d4;</i> <span class="i-name">window-close-oicon-</span><span class="i-code">0xf2d4</span></div>
         <div class="the-icons span3" title="Code: 0xf304"><i class="demo-icon twitter-squaredicon-">&#xf304;</i> <span class="i-name">twitter-squaredicon-</span><span class="i-code">0xf304</span></div>
         <div class="the-icons span3" title="Code: 0xf308"><i class="demo-icon facebook-squaredicon-">&#xf308;</i> <span class="i-name">facebook-squaredicon-</span><span class="i-code">0xf308</span></div>
-        <div class="the-icons span3" title="Code: 0xf30a"><i class="demo-icon twitter-circledicon-">&#xf30a;</i> <span class="i-name">twitter-circledicon-</span><span class="i-code">0xf30a</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf30a"><i class="demo-icon twitter-circledicon-">&#xf30a;</i> <span class="i-name">twitter-circledicon-</span><span class="i-code">0xf30a</span></div>
         <div class="the-icons span3" title="Code: 0xf30d"><i class="demo-icon facebook-circledicon-">&#xf30d;</i> <span class="i-name">facebook-circledicon-</span><span class="i-code">0xf30d</span></div>
         <div class="the-icons span3" title="Code: 0xf310"><i class="demo-icon gplus-circledicon-">&#xf310;</i> <span class="i-name">gplus-circledicon-</span><span class="i-code">0xf310</span></div>
         <div class="the-icons span3" title="Code: 0xf313"><i class="demo-icon pinterest-circledicon-">&#xf313;</i> <span class="i-name">pinterest-circledicon-</span><span class="i-code">0xf313</span></div>
-        <div class="the-icons span3" title="Code: 0xf316"><i class="demo-icon tumblr-circledicon-">&#xf316;</i> <span class="i-name">tumblr-circledicon-</span><span class="i-code">0xf316</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf316"><i class="demo-icon tumblr-circledicon-">&#xf316;</i> <span class="i-name">tumblr-circledicon-</span><span class="i-code">0xf316</span></div>
         <div class="the-icons span3" title="Code: 0xf319"><i class="demo-icon linkedin-circledicon-">&#xf319;</i> <span class="i-name">linkedin-circledicon-</span><span class="i-code">0xf319</span></div>
         <div class="the-icons span3" title="Code: 0xf31e"><i class="demo-icon instagramicon-">&#xf31e;</i> <span class="i-name">instagramicon-</span><span class="i-code">0xf31e</span></div>
         <div class="the-icons span3" title="Code: 0xf31f"><i class="demo-icon instagram-filledicon-">&#xf31f;</i> <span class="i-name">instagram-filledicon-</span><span class="i-code">0xf31f</span></div>
-        <div class="the-icons span3" title="Code: 0xf32d"><i class="demo-icon instagram-1icon-">&#xf32d;</i> <span class="i-name">instagram-1icon-</span><span class="i-code">0xf32d</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf32d"><i class="demo-icon instagram-1icon-">&#xf32d;</i> <span class="i-name">instagram-1icon-</span><span class="i-code">0xf32d</span></div>
         <div class="the-icons span3" title="Code: 0x1f464"><i class="demo-icon usericon-">&#x1f464;</i> <span class="i-name">usericon-</span><span class="i-code">0x1f464</span></div>
         <div class="the-icons span3" title="Code: 0x1f50d"><i class="demo-icon searchicon-">&#x1f50d;</i> <span class="i-name">searchicon-</span><span class="i-code">0x1f50d</span></div>
       </div>
