--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <meta name='reply-to' content='hello@petrnikolas.com'>
     <meta name='url' content=''>
     <meta name='identifier-URL' content=''>
+    <meta name="theme-color" content="#40b8b4">
 
     <!-- OG Meta tags -->
     <meta property="og:title" content="Marley.js">
